1D - uploading photos to db, UI, merging master into this